<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Task_1" Id="{96115f30-6e23-4ae0-a3f5-a348a2e84b6a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Task_1
VAR
	fbDoorControl : FB_DoorControl;   // Instance of the door control function block
	bCardPresented: BOOL;
	bAccessGranted: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Card validation and access granting logic
IF bCardPresented THEN
    bAccessGranted := TRUE;           // Grant access if card is presented
    fbDoorControl(bStartTimer := TRUE);
ELSE
    bAccessGranted := FALSE;
    fbDoorControl(bStartTimer := FALSE);
END_IF

// Write the door status to the GVL
GVL.bDoorClosed := fbDoorControl.bDoorClosed;]]></ST>
    </Implementation>
    <LineIds Name="Task_1">
      <LineId Id="7" Count="9" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>